<resources>
    <string name="app_name">Group3Facebook</string>
    <!--FB information-->
    <string name="facebook_app_id">1856505947974639</string>
    <string name="fb_login_protocol_scheme">fb1856505947974639</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <color name="white">#FFFFFF</color>
    <string name="user_name">Frankenstein</string>
    <string name="view_profile">View your profile</string>
    <string name="instagran">Instagram</string>
    <string name="messenger">Messenger</string>
    <string name="event">Event</string>
    <string name="location">Location</string>
    <string name="group_temp">Group 1</string>
    <string name="group_title_menu">Groups</string>
    <string name="favorites_title_menu">Favorites</string>
    <string name="helpsettings_title_menu">Help &amp; Settings</string>
    <string name="logout_user">Log Out</string>
    <string name="see_all_expansion">See all</string>

    <!--Post Fragment-->
    <string name="creatorNameSam">Frankenstein</string>
    <string name="sampleDate">29/10/2017</string>
    <string name="sampleTime">4:00PM</string>


    <string name="postTextSample">This is a sample post text!\n
        Sunset is the time of day when our sky meets the outer space solar winds.
        There are blue, pink, and purple swirls, spinning and twisting, like clouds of balloons caught in a blender.
        </string>
    <string name="commentSample">This is a sample comment!\nRandom text Random text Random text Random text
        Random text Random text Random text</string>
    <string name="title_activity_login">Login</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="more_feeds">Next</string>
    <string name="refresh">Refresh</string>
    <string name="previous_feeds">Previous</string>
</resources>
