<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="@dimen/postPad"
    android:layout_marginTop="@dimen/postMargin"
    android:background="@color/white"
    tools:context="group3facebook.usth.edu.vn.group3facebook.CommentFragment">

    <!-- TODO: Update blank fragment layout -->
    <!--Commenter info + Comment-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <!--Commenter info-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <ImageView
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:src="@drawable/user_icon"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/user_name"
                android:textColor="@color/textBold"/>
        </LinearLayout>

        <!--Comment-->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/commentSample"/>

    </LinearLayout>

    <!--Buttons Like+Reply-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttonHeight"
            android:layout_weight="1"
            android:text="Like"
            android:textColor="@color/textDark"/>
        <Button
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttonHeight"
            android:layout_weight="1"
            android:text="Reply"
            android:textColor="@color/textDark"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="4 like(s)"/>
        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:text="@string/sampleDate"/>
    </LinearLayout>

</LinearLayout>
