<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/postMain"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/postPad"
    android:paddingLeft="@dimen/postPad"
    android:paddingRight="@dimen/postPad"
    android:layout_marginTop="@dimen/postMargin"

    android:background="@color/BGLight">

    <!-- TODO: Update blank fragment layout -->
    <!--Creator info-->
    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/postPad"
        android:background="@color/BGLightDark"/>
    <LinearLayout
        android:id="@+id/creatorInfo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/creatorInfoHeight"
        android:orientation="horizontal"
        android:padding="@dimen/creatorInfoPad">
        <TextView
            android:id="@+id/creatorName"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/creatorNamePadL"
            android:text="@string/creatorNameSam"
            android:textColor="@color/textBold"/>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/creatorNamePadL"
            >
            <TextView
                android:id="@+id/createDate"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sampleDate"/>
            <TextView
                android:id="@+id/createTime"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:text="@string/sampleTime"/>
        </LinearLayout>
    </LinearLayout>
    <View
        android:id="@+id/border"
        android:layout_width="350dp"
        android:layout_height="3dp"
        android:background="@color/colorPrimaryDark"
        android:layout_marginLeft="20dp"
        android:layout_alignBottom="@+id/creatorInfo"></View>
    <!--End creator info-->

    <!--News Fragment Using code to post it on-->
    <LinearLayout
        android:id="@+id/News"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >
        <TextView
            android:id="@+id/message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/postPad"
            android:text="@string/postTextSample"/>
        <!-- End Text View-->

        <!-- Image View -->
        <ImageView
            android:id="@+id/picture"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageMaxH"
            android:src="@drawable/sample_image"
            android:layout_below="@+id/TextField"
            android:background="@color/BGLightDark"/>
    </LinearLayout>

    <!--Like/comment button-->


</LinearLayout>

<!--
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/News"
        >
        <Button
            android:layout_width="0dp"
            android:layout_height="@dimen/buttonHeight"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="Like"
            android:textColor="@color/textDark"/>
        <View
            android:layout_width="1dp"
            android:layout_height="@dimen/buttonHeight"
            android:background="@color/BGLightDark"/>
        <Button
            android:id="@+id/btnComment"
            android:layout_width="0dp"
            android:layout_height="@dimen/buttonHeight"
            android:layout_weight="1"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:text="Comment"
            android:textColor="@color/textDark"/>
    </LinearLayout>
-->